# ECE324_project

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml
ECE324_Project/: __init__.py  config.py  dataset.py  dataset_download.py  debug_frame.py  eval.py  eval_calibration.py  eval_calibration_on_synloc.py  eval_synloc.py  eval_synloc_on_calib.py  features.py  location_engine.py  model_sizes.py  pipeline.py  plots.py  prepare_yolo.py  test.py  test_dataset.py  train_calibration.py  train_synloc.py  tune_calibration.py  verify_synloc.py  visualize_bev.py  visualize_label.py  visualize_pitch.py  viz_team.py
ECE324_Project/configs/: calibration.yaml  calibration_synloc.yaml  synloc.yaml
ECE324_Project/dataset/: dataset_download.py  edit_anno.py  prep_calibration.py  prep_synloc.py  sync_manual.py  synloc_10k.py  synloc_to_calib.py  synloc_to_yolo.py  verify_synloc_calib.py
ECE324_Project/eval/: eval_calibration.py  eval_calibration_on_synloc.py  eval_pipeline.py  eval_pipeline_baseline_metrics.py  eval_synloc.py  model_sizes.py
ECE324_Project/modeling/: predict.py  train.py
ECE324_Project/rcnn/: dataset.py
ECE324_Project/train/: tune_calibration.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: football_model.py  matcher.py  r_cnn.py  train_pitch.py  train_rcnn.py  yolo.py
models/runs/calibration/: args.yaml  results.csv
models/runs/calibration_finetuned/: args.yaml
models/runs/synloc/: args.yaml
models/runs/synloc_50/: results.csv
