[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ECE324_Project"
version = "0.0.1"
description = "To estimate the position of football players from a camera image."
authors = [
  { name = "Team_Balls" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.1"


[tool.ruff]
line-length = 99
src = ["ECE324_Project"]
include = ["pyproject.toml", "ECE324_Project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ECE324_Project"]
force-sort-within-sections = true

